@@ -1,3 +1,8 @@
+2007-02-04  Al Riddoch  <alriddoch@zepler.org>
+
+	* eris.cpp: Increment a borrowed reference before passing it to a
+	  function that steals a reference.
+
 2007-02-02  Al Riddoch  <alriddoch@zepler.org>
 
 	* setup.py, eris.cpp: Rename modules to avoid conflicts.
